final: removed unceccary files

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
 /* ======================= */
 
 .heartcry-header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
