final: removed unceccary files

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -63,6 +63,7 @@
 .hero-church-name {
   font-size: 5.5rem !important;
   font-weight: 900;
+  color: #e8c0a0;
   line-height: 1.05;
   margin: 0 0 1rem 0 !important;
   letter-spacing: -2px;
